Bug 126656 - Modifying one outline level with slide scope selected changes layout for all the outline levels
Summary: Modifying one outline level with slide scope selected changes layout for all ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha1+
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Gülşah Köse
URL:
Whiteboard: target:6.4.0 target:6.3.2
Keywords:
: 126655 (view as bug list)
Depends on:
Blocks: Impress-Bullet-Numbering-Dialog
  Show dependency treegraph
 
Reported: 2019-08-01 10:03 UTC by bureautiquelibre
Modified: 2019-09-03 09:14 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Demo of slide level bug (282.43 KB, image/gif)
2019-08-01 10:03 UTC, bureautiquelibre
Details
Example file (151.34 KB, application/vnd.oasis.opendocument.presentation)
2019-08-01 10:03 UTC, bureautiquelibre
Details

Note You need to log in before you can comment on or make changes to this bug.
Description bureautiquelibre 2019-08-01 10:03:03 UTC
Hi,

Steps to reproduce:

Open presentation, go to slide 2, Roght click to launch B&N dialog.

Select level 2, change bullet.

Select scope level "Slide".

Click OK

All outline levels are changed. Only level 2 should change.

See attached screencap + example file

Regards,
Eric Ficheux
Comment 1 bureautiquelibre 2019-08-01 10:03:37 UTC
Created attachment 153087 [details]
Demo of slide level bug
Comment 2 bureautiquelibre 2019-08-01 10:03:59 UTC
Created attachment 153088 [details]
Example file
Comment 3 bureautiquelibre 2019-08-01 10:05:05 UTC
*** Bug 126655 has been marked as a duplicate of this bug. ***
Comment 4 Gülşah Köse 2019-08-27 14:35:03 UTC
Hello, Thanks for helpful demo. To understand better, after the apply slide:

Does "changes layout for all the outline levels" means, third slide's 2nd outline level changes too or second slides all outline level's font size and spacing were change?
Comment 5 Gülşah Köse 2019-08-29 11:22:15 UTC
I'll fix the issue on demo video. I've started to work on it yesterday. Thanks
Comment 6 Commit Notification 2019-08-30 22:23:18 UTC
Gülşah Köse committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/438430904064e667b688275525b317fd7989af2e%5E%21

tdf#126656 Remove unnecessary items from itemset.

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2019-09-03 09:14:12 UTC
Gülşah Köse committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/+/8c8b29c3f42686bf14ed84582dd02784867527f5%5E%21

tdf#126656 Remove unnecessary items from itemset.

It will be available in 6.3.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.