tdf#126656 Remove unnecessary items from itemset.

Change-Id: I62fc660ea061fe9665e0166a08871ba0a592fc41
Reviewed-on: https://gerrit.libreoffice.org/78332
Tested-by: Jenkins
Reviewed-by: Gülşah Köse <gulsah.kose@collabora.com>
(cherry picked from commit 438430904064e667b688275525b317fd7989af2e)
Reviewed-on: https://gerrit.libreoffice.org/78414